<?xml version="1.0"?>
<package format="2">
  <name>rosbag_extractor</name>
  <version>0.0.0</version>
  <description>The bag_extractor package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>Boost</depend>
  <depend>fmt</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rosbag</depend>
  <depend>OpenCV</depend>
  <depend>novatel_gps_driver</depend>
  <depend>livox_ros_driver</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
